--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,7 +71,11 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "watch": "npm-watch",
     "test": "node scripts/test.js"
+  },
+  "watch": {
+    "build": "src/"
   },
   "eslintConfig": {
     "extends": [
@@ -147,5 +151,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "cra-build-watch": "^3.4.0",
+    "npm-watch": "^0.9.0"
   }
 }
