--- a/backend/config/supervisor.conf
+++ b/backend/config/supervisor.conf
@@ -1,9 +1,9 @@
 [program:chess-django]
-user = zdimon 
+#user = zdimon 
 directory = /home/zdimon/ssd/web/dj-chess/backend
-command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 manage.py runserver 0.0.0.0:9085
+command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 manage.py runserver 0.0.0.0:9081
 autostart = true
 autorestart = true
 environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
-stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/backend/err.log
-stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/backend/out.log
+stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/err.log
+stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/out.log
