--- a/backend/config/supervisor.conf
+++ b/backend/config/supervisor.conf
@@ -1,5 +1,5 @@
 [program:chess-django]
-#user = zdimon 
+user = zdimon 
 directory = /home/zdimon/ssd/web/dj-chess/backend
 command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 manage.py runserver 0.0.0.0:9081
 autostart = true
@@ -7,3 +7,13 @@ autorestart = true
 environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
 stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/err.log
 stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/out.log
+
+
+[program:chess-frontend]
+user = zdimon 
+directory = /home/zdimon/ssd/web/dj-chess/frontend
+command = npm run watch
+autostart = true
+autorestart = true
+stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/front-err.log
+stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/front-out.log
