commit from zdimon77@gmail.com ----

--- a/backend/config/supervisor.conf
+++ b/backend/config/supervisor.conf
@@ -1,12 +1,12 @@
 [program:chess-django]
-#user = zdimon 
+user = zdimon 
 directory = /home/zdimon/ssd/web/dj-chess/backend
 command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 manage.py runserver 0.0.0.0:9081
 autostart = true
 autorestart = true
 environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
-stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/err.log
-stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/out.log
+stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/django-err.log
+stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/django-out.log
 
 [program:chess-frontend]
 user = zdimon 
@@ -16,3 +16,24 @@ autostart = true
 autorestart = true
 stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/front-err.log
 stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/front-out.log
+
+[program:chess-socket]
+user = zdimon 
+directory = /home/zdimon/ssd/web/dj-chess/backend
+command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 manage.py start_socket
+autostart = true
+autorestart = true
+environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
+stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/socket-err.log
+stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/socket-out.log
+
+
+[program:chess-celery]
+user = zdimon 
+directory = /home/zdimon/ssd/web/dj-chess/backend
+command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 celery -A dj_chess worker -l info
+autostart = true
+autorestart = true
+environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
+stderr_logfile=/home/zdimon/ssd/web/dj-chess/logs/celery-err.log
+stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/celery-out.log
