--- a/backend/config/nginx.conf
+++ b/backend/config/nginx.conf
@@ -1,3 +1,13 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+upstream chesssocket {
+    server 192.168.9.241:5001;
+}
+
+
 server { 
     listen 80;
     server_name chess.pi.wezom.webmonstr.com;
@@ -8,6 +18,14 @@ server {
         proxy_redirect off;
         proxy_buffering off;
         proxy_pass http://192.168.9.241:9081;
+    }
+
+    location /socket {
+        proxy_pass https://chesssocket;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
     }
 
     location /media {
