--- a/backend/config/supervisor.conf
+++ b/backend/config/supervisor.conf
@@ -31,7 +31,7 @@ stdout_logfile=/home/zdimon/ssd/web/dj-chess/logs/socket-out.log
 [program:chess-celery]
 user = zdimon 
 directory = /home/zdimon/ssd/web/dj-chess/backend
-command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/python3 celery -A dj_chess worker -l info
+command = /home/zdimon/ssd/web/dj-chess/backend/venv/bin/celery -A dj_chess worker -l info
 autostart = true
 autorestart = true
 environment=PYTHONPATH="/home/zdimon/ssd/web/dj-chess/backend/venv"
